# graduate_work

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
admin_panel/: docker-compose.yml
admin_panel/admin_panel/: Dockerfile  env_sample.txt  manage.py  requirements.txt
api_lk/: docker-compose.yml  env_sample.txt
api_lk/nginx/: site.conf
api_lk/src/: Dockerfile  entrypoint.sh  main.py  requirements.txt
auth_service/: docker-compose-test.yml  docker-compose.yml
auth_service/nginx/: nginx.conf  site.conf
auth_service/postgres/: .env.sample
docs/: architecture.puml
film_api/: .gitignore  README.md
recommendation/: docker-compose.yml
recommendation/recommendation_api/: Dockerfile  main.py  pyproject.toml
recommendation/recommendation_api/api/v1/: __init__.py  recommendation.py
recommendation/recommendation_api/core/: config.py
recommendation/recommendation_api/db/: qdrant.py
recommendation/recommendation_api/models/: base.py  body.py
recommendation/recommendation_api/svc/: embedder.py  qdrant.py
recommendation/recommendation_etl/: .env.dev  Dockerfile  main.py  pyproject.toml
recommendation/recommendation_etl/core/: config.py
recommendation/recommendation_etl/coroutines/: __init__.py  enricher.py  loader.py  merger.py  producer.py  transformer.py
recommendation/recommendation_etl/db/: pg.py  state_storage.py
recommendation/recommendation_etl/models/: body.py
recommendation/recommendation_etl/svc/: qdrant.py
stat_service/: docker-compose-test.yml  docker-compose.yml
ugc/: README.md
(+151 files in other folders)
