[tool.poetry]
name = "recommendation_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
orjson = "^3.7.2"
pydantic = "^1.9.1"
PyJWT = "^2.4.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
backoff = "^2.1.2"
requests = "^2.28.0"
sentry-sdk = "^1.6.0"
qdrant-client = "^0.9.0"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
